2010-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	added Port QoS stats (ME3400)

2010-12-19  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2662_ADSL_LINE.pm:
	re-organized the templates for Cisco 837 compatibility

2010-12-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* sup/webplain/torrus.css: slightly darker top and bottom shortcuts

	* perllib/Torrus/DevDiscover.pm (discover):
	New discovery parameter: X-tokenset-rrgraph-view

	* templates/default-tset.html: New view parameter: rrgraph-view

2010-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
        * perllib/Torrus/DevDiscover/CiscoIOS.pm:
        New discovery parameter: CiscoIOS::enable-dialer-interfaces

2010-11-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	bugfix: RFC2863_IF_MIB::nodeid-hint=ifIndex  did not really work

2010-11-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm (do_process): added extra DB cleaninup

2010-11-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	Added CISCO-WAN-3G-MIB support

2010-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoWLC.pm:
	new discovery parameter: CiscoWLC::only-ssid

2010-11-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	New selector action: AddTemplates

2010-10-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoWLC.pm: new discovery module

	* NEWS: Release 1.0.9

2010-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm: New URL parameter: 'v' is a synonym for 'view'

2010-10-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
