@@ -525,8 +525,11 @@ the discovery configuration file. Example:
 Optional. For a device that doesn't have a corresponding vendor-specific
 discovery module, this parameter would advice C<devdiscover> how to build
 C<ifTable> index mapping. By default, the interfaces are mapped by
-C<ifDescr> variables. For many vendors, this would not give reliable
-mapping. Valid values are: C<ifName>, C<ifPhysAddress>, and C<ifIndex>.
+C<ifDescr> values if they are unique, or C<ifName> otherwise. If C<ifName>
+is non-unique, C<ifIndex> is taken as interface reference.
+For many vendors, this would not give reliable or convenient
+mapping. Valid values for the hint are:
+C<ifName>, C<ifPhysAddress>, and C<ifIndex>.
 The first two suggest the mapping by corresponding SNMP variables, and
 the third one should be used for devices with fixed C<ifIndex> layout: in
 this case, the C<ifIndex> values are recorded as they are at the moment of
